@@ -65,7 +65,7 @@ function x = scinrrd_index2world(idx, ax)
 % See also: scinrrd_world2index.
 
 % Author: Ramon Casero <rcasero@gmail.com>
-% Copyright © 2009-2010 University of Oxford
+% Copyright © 2009-2011 University of Oxford
 % 
 % University of Oxford means the Chancellor, Masters and Scholars of
 % the University of Oxford, having an administrative office at
@@ -91,39 +91,38 @@ function x = scinrrd_index2world(idx, ax)
 % along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 % check arguments
-error( nargchk( 2, 2, nargin, 'struct' ) );
-error( nargoutchk( 0, 1, nargout, 'struct' ) );
+error(nargchk(2, 2, nargin, 'struct'));
+error(nargoutchk(0, 1, nargout, 'struct'));
 
-if ( size( idx, 2 ) ~= 3 )
-    error( 'IDX must be a 3-column matrix, so that each row has the 3 indices of a voxel' )
+if (size(idx, 2) ~= 3)
+    error('IDX must be a 3-column matrix, so that each row has the 3 indices of a voxel')
 end
 
 % init output
-x = zeros( size( idx ) );
+x = zeros(size(idx));
 
 % extract parameters
-xmin = [ ax.min ];
-xmax = [ ax.max ];
-dx = [ ax.spacing ];
+xmin = [ax.min];
+dx = [ax.spacing];
+n = [ax.size];
 % remove dummy dimension, if present
-if ( length( xmin ) == 4 )
-    xmin = xmin( 2:end );
-    xmax = xmax( 2:end );
-    dx = dx( 2:end );
+if (length(xmin) == 4)
+    xmin = xmin(2:end);
+    dx = dx(2:end);
 end
 
 % number of dimensions (we expect D=3, but in case this gets more general)
-D = length( dx );
-
-% convert indices to real world coordinates
-for I = 1:D
-    x( :, I ) = ( idx( :, I ) - 1 ) * dx( I ) + xmin( I );
-end
+D = length(dx);
 
 % find coordinates that are outside the volume
 for I = 1:D
-    x( x( :, I ) < xmin( I ) | x( :, I ) > xmax( I ), I ) = NaN;
+    idx(idx(:, I) < 0.5 | idx(:, I) > n(I)+0.5, I) = NaN;
+end
+
+% convert indices to real world coordinates
+for I = 1:D
+    x(:, I) = (idx(:, I) - .5) * dx(I) + xmin(I);
 end
 
 % (y, x, z) => (x, y, z)
-x = x( :, [ 2 1 3 ] );
+x = x(:, [2 1 3]);
